# physical-media-tracker

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  listener.py  listener.service  pyproject.toml  schema.sql  task.md
.github/workflows/: ci.yml
app/: catalog.py  db.py  discogs.py  fingerprint.py  gap_detector.py  identify.py  local_match.py  main.py  musicbrainz.py  timer.py  track_matcher.py
app/templates/: add.html  base.html  collection.html  listen.html  now_playing.html
docs/: ARCHITECTURE.md  AUDIO_PIPELINE.md  DEVLOG.md
docs/adr/: ADR-001  ADR-002
scripts/: init_db.py
tests/: test_catalog.py  test_gap_detector.py  test_identify.py  test_listener.py  test_local_match.py  test_main.py  test_timer.py  test_track_matcher.py
