[project]
name = "physical-media-tracker"
version = "0.1.0"
description = "Raspberry Pi box that catalogs physical media and tracks what's currently playing via audio fingerprinting."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "requests>=2.32",
    "pyacoustid>=1.3",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sounddevice>=0.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
